--- a/style.css
+++ b/style.css
@@ -58,6 +58,29 @@ ul {
     list-style: none;
     margin-top: 50px;
     margin-left: -40px;
+    height: 100px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    padding-right: 15px;
+}
+
+ul::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+ul::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background: bisque;
+  border-radius: 10px;
+}
+
+ul::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #00e07a, #009b5f);
 }
 
 li {
